# proyecto-04-pm-copilot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  docker-compose.yml
backend/: .coverage  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_chat_tables.py  004_add_llm_usage_table.py
backend/src/application/commands/: __init__.py  create_task_command.py  estimate_task_command.py  generate_report_command.py  plan_sprint_command.py  update_task_command.py
backend/src/application/use_cases/: __init__.py  create_task_use_case.py  estimate_task_use_case.py  generate_report_use_case.py  index_documents_use_case.py  login_use_case.py  plan_sprint_use_case.py  query_knowledge_use_case.py  query_project_status_use_case.py  sync_jira_use_case.py  update_task_use_case.py
backend/src/domain/: exceptions.py
backend/src/domain/entities/: __init__.py  chat.py  estimation.py  knowledge.py  project.py  report.py  task.py  user.py
backend/src/domain/ports/: __init__.py  auth_port.py  chat_repository_port.py  confluence_port.py  document_generator_port.py  embedding_port.py  github_port.py  jira_port.py  llm_port.py  project_repository_port.py  sprint_repository_port.py  task_repository_port.py  user_repository_port.py  vector_store_port.py
backend/src/domain/services/: __init__.py  chunker.py  estimation_service.py  planning_service.py  rag_service.py
backend/src/infrastructure/: container.py  main.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
(+153 files in other folders)
