[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-copilot"
version = "0.1.0"
description = "PM Copilot — intelligent project management assistant"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # LLM providers
    "anthropic>=0.31",
    "httpx>=0.27",
    # Resilience
    "tenacity>=8.4",
    # Document generation
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio>=4.4",
    "httpx>=0.27",  # for TestClient
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
